# JayD-Firmware

./: CMakeLists.txt  JayD-Firmware.ino  README.md
data/: Test.aac  backgroundBlack.raw.hs  bitcrusher.g565  bitcrusherBlue.raw  dj.g565  dj.raw.hs  djGIF.g565  fw.raw  highpass.g565  highpassBlue.raw  highpassRed.raw  intro.aac  intro.g565.hs  introGIF.g565.hs  jayD_logo.raw.hs  lowpass.g565  lowpassBlue.raw  lowpassRed.raw  mainMenuBackground.raw.hs  mixSelectedBg.raw.hs  noEffect.g565  noEffectBlue.raw  pause_dj.raw  play.raw  play_dj.raw  playback.raw.hs  playbackBackground.raw.hs  playbackGIF.g565  reverb.g565  reverbBlue.raw  reverbRed.raw  rew.raw  settings.raw.hs  settingsBackground.raw.hs  settingsGIF.g565  speed.g565  speedBlue.raw  speedRed.raw
data/mixScreen/pictures/: bitcrusherRed.raw  noEffectRed.raw
data/playback/playPausePictures/: pause.raw
src/: Fonts.cpp  Fonts.h  HWTestSD.hpp  HWTestSPIFFS.hpp  HardwareTest.cpp  HardwareTest.h  InputKeys.cpp  InputKeys.h  SPIFFSChecksums.hpp  SPIFFSFiles.hpp
src/Matrix/: MatrixBig.h  MatrixL.h  MatrixPartition.cpp  MatrixPartition.h  MatrixR.h
src/Screens/FirstStartupTest/: BtnTestElement.cpp  BtnTestElement.hpp  EncTestElement.cpp  EncTestElement.h  FirstStartupTest.cpp  FirstStartupTest.h  PotTestElement.cpp  PotTestElement.hpp
src/Screens/InputTest/: BtnTestElement.cpp  EncTestElement.cpp  InputTest.cpp  InputTest.h  PotTestElement.cpp  PotTestElement.hpp
src/Screens/IntroScreen/: IntroScreen.cpp  IntroScreen.h
src/Screens/IntroScreen/Bitmaps/: introGIF.h
src/Screens/MainMenu/: MainMenu.cpp  MainMenu.h  MainMenuItem.cpp  MainMenuItem.h  Mode.cpp  Mode.h
src/Screens/MainMenu/Bitmaps/: DJ_red.hpp  Playback_blue.hpp  Settings_orange.hpp  dj.h  dj.hpp  djGIF.hpp  mainMenu_background.h  playback.h  playback.hpp  playbackGIF.hpp  reset.hpp  settings.h  settings.hpp  settingsGIF.hpp
src/Screens/MixScreen/: EffectElement.cpp  EffectElement.h  EffectElement.hpp  Effects.cpp  Effects.hpp  LeftSeekBar.cpp  LeftSeekBar.hpp  MainSeekBar.cpp  MainSeekBar.hpp  MatrixPopUpPicker.cpp  MatrixPopUpPicker.h  MixScreen.cpp  MixScreen.h  MixScreen.hpp  RightSeekBar.cpp  RightSeekBar.hpp  SongName.cpp  SongName.h  SongName.hpp  SongSeekBar.cpp  SongSeekBar.h
src/Screens/MixScreen/Bitmaps/: bitcrusher.hpp  bitcrusherFadeBlue.hpp  bitcrusherFadeRed.hpp  bitcrusherGIF.h  high_pass.hpp  highpass.hpp  highpassFadeBlue.h  highpassFadeRed.hpp  highpassGIF.h  low_pass.hpp  lowpass.hpp  lowpassFadeBlue.hpp  lowpassFadeRed.hpp  lowpassGIF.h  pause_dj.hpp  play dj.hpp  play_dj.h  reverb.hpp  reverbFadeBlue.hpp  reverbFadeRed.hpp  reverbGIF.h  speed.hpp  speedFadeBlue.hpp  speedFadeRed.hpp  speedGIF.h  walkietalkie_fade_red.hpp
src/Screens/MixScreen/gif/: highpass.hpp  lowpass.hpp  reverb.hpp  speed.hpp  walkietalkie.hpp
src/Screens/Playback/: Buttons.cpp  Buttons.h  PlayPause.cpp  PlayPause.h  Playback.cpp  Playback.h  Playback.hpp  SongName.cpp  SongName.h  SongName.hpp  TrackCounter.cpp  TrackCounter.h  TrackCounter.hpp
src/Screens/Playback/Bitmaps/: fw.hpp  pause.hpp  play.hpp  playback _pozadina.hpp  rew.hpp
src/Screens/Settings/: BooleanElement.cpp  BooleanElement.h  BooleanSetting.cpp  BooleanSetting.h  BrightnessSettings.cpp  BrightnessSettings.h  DropDownElement.cpp  DropDownElement.h  DropDownSetting.cpp  DropDownSetting.h  Settings.cpp  Settings.h  SettingsElement.cpp  SettingsElement.h  SettingsScreen.cpp  SettingsScreen.h  SliderElement.cpp  SliderElement.h  SliderSetting.cpp  SliderSetting.h  TextElement.cpp  TextElement.h
src/Screens/SongList/: ListItem.cpp  ListItem.h  SongList.cpp  SongList.h
src/Screens/TextInputScreen/: TextInputScreen.cpp  TextInputScreen.h
src/Screens/TextInputScreen/Bitmaps/: backgroundTextEntry.hpp
